fix(Panel): refactor vertical overflow of side panel

--- a/src/style.css
+++ b/src/style.css
@@ -442,17 +442,15 @@ code.uiContainer {
 }
 
 .uiContainer {
-  display: flex;
-  align-items: stretch;
-  flex-direction: column;
-  justify-content: space-between;
-  position: absolute;
+  position: relative;
   top: 5px;
   left: 5px;
   padding: 2px;
-  border: 0px;
-  box-sizing: border-box;
   z-index: 1000;
+
+  width: fit-content;
+  height: 100%;
+  overflow: auto;
 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
